mik-button: fix alignment of icon and text

--- a/src/components/mik-button/mik-button.css
+++ b/src/components/mik-button/mik-button.css
@@ -69,6 +69,11 @@ button {
 
 .withButtonIcon-xxl span {
     position: relative;
+    font-size: 17px;
+    vertical-align: middle;
+}
+
+.withButtonIcon-xl span {
+    position: relative;
     top: -6px;
-    left: -9px;
 }
